# AUV-2024

Docker/: compose.yml
Docker/jetson/: 99-auv.rules  Dockerfile  compose.yml  requirements.txt
catkin_ws/src/controls/: CMakeLists.txt
catkin_ws/src/controls/src/: joystick.py  quaternion_pid.cpp
catkin_ws/src/state_estimation/data/: essai_essai1_nav.txt
catkin_ws/src/state_estimation/data/processed_images/: essai_essai1_nav.dim2
catkin_ws/src/state_estimation/data/processed_images/outReconstruction/: MyProcessing_0_texrecon.kml  model_origin.txt
catkin_ws/src/state_estimation/data/processed_images/outReconstruction/log/: user_log.txt
catkin_ws/src/state_estimation/data/processed_images/outReconstruction/temp/ModelPart_0/: 00000000_Resection.ply  00000001_Resection.ply  00000002_Resection.ply  00000003_Resection.ply  00000004_Resection.ply  MyProcessing_0.mvs  Reconstruction_Report.html  SfMReconstruction_Report.html  cloud_and_poses.ply  initialPair.ply
catkin_ws/src/state_estimation/data/processed_images/outReconstruction/temp/matches/: 20150419T012600.000Z.desc  20150419T012600.000Z.feat  20150419T012601.000Z.desc  20150419T012601.000Z.feat  20150419T012602.000Z.desc  20150419T012602.000Z.feat  (+62 more)
catkin_ws/src/state_estimation/src/: data_format.py  image_stitching.py
catkin_ws/src/vision/launch/test/: measure_angle.test
catkin_ws/src/vision/src/: image_stitching.py  object_detection_utils.py  stereo_lab_test.py  test_front_cam.py
catkin_ws/src/vision/src/test/: measure_angle_test.py  transform_local_to_global_test.py  visualize_bbox_test.py
(+1 files in other folders)
